disabled all extra.paralax.social stuff by default

--- a/theme.toml
+++ b/theme.toml
@@ -48,53 +48,53 @@ list = [
 
 [extra.materialize.social]
 
-ga = "UA-12345678-9"
-discuss = "verpeteren"
+#ga = "UA-12345678-9"
+#discuss = "verpeteren"
 
-facebook = "verpeteren"
-livejournal = "verpeteren"
-twitter = "verpeteren"
-reddit = "u/verpeteren"
-googleplus = "123456789012345678901"
+#facebook = "verpeteren"
+#livejournal = "verpeteren"
+#twitter = "verpeteren"
+#reddit = "u/verpeteren"
+#googleplus = "123456789012345678901"
 
-hackernews = "verpeteren"
-slashdot = "verpeteren"
-myspace = "verpeteren"
-tumblr = "verpeteren"
-medium = "verpeteren"
+#hackernews = "verpeteren"
+#slashdot = "verpeteren"
+#myspace = "verpeteren"
+#tumblr = "verpeteren"
+#medium = "verpeteren"
 
-skype = "verpeteren"
-slack = "verpeteren"
-whatsapp = "0031623456789"
-viber = "verpeteren/%2B/en"
-wikipedia = "verpeteren"
+#skype = "verpeteren"
+#slack = "verpeteren"
+#whatsapp = "0031623456789"
+#viber = "verpeteren/%2B/en"
+#wikipedia = "verpeteren"
 
-pinterest = "verpeteren"
-pinboard = "verpeteren"
-dribble = "verpeteren"
-flickr = "16832534@N03"
-instagram = "verpeteren"
+#pinterest = "verpeteren"
+#pinboard = "verpeteren"
+#dribble = "verpeteren"
+#flickr = "16832534@N03"
+#instagram = "verpeteren"
 
-songkick = "1234567-ver-peteren"
-bandcamp = "verpeteren"
-soundcloud = "verpeteren"
-lastfm = "Ver-Peteren"
+#songkick = "1234567-ver-peteren"
+#bandcamp = "verpeteren"
+#soundcloud = "verpeteren"
+#lastfm = "Ver-Peteren"
 
-github = "verpeteren"
-gitlab = "verpeteren"
-bitbucket = "verpeteren"
-stackoverflow = "1234567/verpeteren"
+#github = "verpeteren"
+#gitlab = "verpeteren"
+#bitbucket = "verpeteren"
+#stackoverflow = "1234567/verpeteren"
 
-deviantart = "verpeteren"
-shadertoy = "verpeteren"
+#deviantart = "verpeteren"
+#shadertoy = "verpeteren"
 
-youtube = "DJtJKMICpb9B1qf7qjEOA"
-periscope = "1gqxvYRvnBgJB"
-vimeo = "verpeteren"
+#youtube = "DJtJKMICpb9B1qf7qjEOA"
+#periscope = "1gqxvYRvnBgJB"
+#vimeo = "verpeteren"
 
-email = "peter.reijnders@verpeteren.nl"
-linkedin = "peter-reijnders-83634149"
-xing = "peter_reijnders123"
-meetup = "A-Meetup-Group"
-justgiving = "verpeteren"
+#email = "peter.reijnders@verpeteren.nl"
+#linkedin = "peter-reijnders-83634149"
+#xing = "peter_reijnders123"
+#meetup = "A-Meetup-Group"
+#justgiving = "verpeteren"
 
