toying with the sidebar

--- a/theme.toml
+++ b/theme.toml
@@ -19,7 +19,7 @@ repo = "https://github.com/Dogfalo/materialize/"
 logo = {small = "http://placehold.it/32x32", big = "http://placehold.it/240x240"}
 home = {url = "/index", name = "Home"}
 copyright = {url = "/#", name ="© 2018"}
-sidebar = true
+sidebar = "off" #"left"
 links = [
     {url = "/project", name = "Project page"},
     {url = "/blog", name = "Blog"},
